--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@synaptic-simulations/mach",
-    "version": "1.1.0-rc4",
+    "name": "@tacotakedown/mach",
+    "version": "1.1.1",
     "description": "The last MSFS instrument bundler you'll ever need.",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
@@ -15,7 +15,7 @@
     },
     "keywords": ["msfs", "bundler", "esbuild"],
     "author": "Michael Romashov <mromashov@icloud.com>",
-    "repository": "https://github.com/Synaptic-Simulations/mach",
+    "repository": "https://github.com/tacotakedown/mach",
     "license": "MIT",
     "dependencies": {
         "chalk": "^4.1.2",
